# preflight

./: HANDOFF_SPEC.md  README.md  SELF_LEARNING_SPEC.md  VISION_FIX_SPEC.md  pyproject.toml
humanqa/: cli.py  mcp_server.py
humanqa/core/: file_mapper.py  llm.py  orchestrator.py  pipeline.py  quick_check.py  schemas.py
humanqa/lenses/: auth_lens.py  institutional_lens.py  responsive_lens.py
humanqa/reporting/: handoff.py  report_generator.py  webhook.py
humanqa/reporting/templates/: report.html
humanqa/runners/: web_runner.py
preflight/: __init__.py  cli.py  mcp_server.py
preflight/core/: intent_modeler.py  llm.py  orchestrator.py  persona_generator.py  pipeline.py  quick_check.py  schemas.py  seed_input.py
preflight/lenses/: design_lens.py  responsive_lens.py
preflight/reporting/: report_generator.py
preflight/runners/: web_runner.py
tests/: test_abandonment.py  test_cognitive_behavior.py  test_quick_check.py  test_refinements.py  test_reporting.py  test_retention.py  test_seed_input.py  test_think_aloud.py  test_vision_fixes.py
