[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preflight-qa"
version = "0.2.0"
description = "Your AI QA crew — evaluates products like real users would, right from your coding session"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["qa", "testing", "ai", "evaluation", "mcp", "playwright", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "playwright>=1.48.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/jxi5410/preflight"
Repository = "https://github.com/jxi5410/preflight"
Issues = "https://github.com/jxi5410/preflight/issues"

[project.scripts]
preflight = "preflight.cli:main"
preflight-mcp = "preflight.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
